Adding more snjppets from my titanic notes.

--- a/python/CLI.ipynb
+++ b/python/CLI.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4dad562e",
    "metadata": {},
@@ -58,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7afbbe49",
    "metadata": {},
@@ -108,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5dc3727b",
    "metadata": {},
@@ -164,6 +167,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a64bd3ee",
    "metadata": {},
@@ -199,6 +203,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b2a70480",
    "metadata": {},
@@ -229,6 +234,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "311cee3a",
    "metadata": {},
@@ -258,6 +264,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db569b72",
    "metadata": {},
@@ -285,6 +292,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6b44ff08",
    "metadata": {},
@@ -313,6 +321,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ba9f9d8d",
    "metadata": {},
@@ -343,6 +352,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29df6941",
    "metadata": {},
@@ -371,6 +381,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "666daaa3",
    "metadata": {},
@@ -400,6 +411,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e106d1ff",
    "metadata": {},
@@ -408,6 +420,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f4aa7ab2",
    "metadata": {},
@@ -440,6 +453,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87a002aa",
    "metadata": {},
@@ -469,6 +483,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cf3fc9c7",
    "metadata": {},
@@ -498,6 +513,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d368008b",
    "metadata": {},
@@ -528,6 +544,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c146bc14",
    "metadata": {},
@@ -556,6 +573,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d78d084",
    "metadata": {},
@@ -590,6 +608,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9f19f3da",
    "metadata": {},
@@ -619,6 +638,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9a5cc602",
    "metadata": {},
@@ -657,6 +677,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dd0b014e",
    "metadata": {},
@@ -665,6 +686,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3cff93ae",
    "metadata": {},
@@ -673,6 +695,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0f53c0d",
    "metadata": {},
@@ -778,6 +801,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0683fae0",
    "metadata": {},
@@ -850,6 +874,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e5f531a2",
    "metadata": {},
@@ -920,9 +945,186 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "14a1646b",
+   "metadata": {},
+   "source": [
+    "# Checking OS\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b190fd1b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "darwin\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sys import platform\n",
+    "\n",
+    "print(platform)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9062e54e",
+   "metadata": {},
+   "source": [
+    "# Color Printing\n",
+    "\n",
+    "Special escape sequences to start a color and then go back to normal can just be part of the string in python. A lot of shells like Bash use these escape sequences as well.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f8ad182e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mThis is red text.\u001b[0m\n",
+      "\u001b[34mThis is blue text.\u001b[0m\n",
+      "\u001b[32mThis is green text.\n",
+      "This is still green because I did not reset.\n",
+      "\u001b[0mBack to normal.\n",
+      "\u001b[33m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Color escape sequences\n",
+    "RESET = '\\033[0m'\n",
+    "RED = '\\033[31m'\n",
+    "GREEN = '\\033[32m'\n",
+    "YELLOW = '\\033[33m'\n",
+    "BLUE = '\\033[34m'\n",
+    "\n",
+    "# Printing\n",
+    "print(RED + 'This is red text.' + RESET)\n",
+    "print(BLUE + 'This is blue text.' + RESET)\n",
+    "print(GREEN + 'This is green text.')\n",
+    "print('This is still green because I did not reset.')\n",
+    "print(RESET, end='')\n",
+    "print('Back to normal.')\n",
+    "\n",
+    "# Sending unterminated color to next cell.\n",
+    "print(YELLOW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6ed10a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is not yellow because jupyter cells reset color.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('This is not yellow because jupyter cells reset color.')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e436367c",
+   "metadata": {},
+   "source": [
+    "# termcolor\n",
+    "\n",
+    "NOTE: termcolor is a pip package you **must install** to use.\n",
+    "\n",
+    "It makes it a little nicer to use because you can look at the params list to see what you can do instead of having to look up all the escape sequences and try to read them in the code.\n",
+    "\n",
+    "Also, it handles the reset for you and wraps the whole thing.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f2566960",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mHello, world!\u001b[0m\n",
+      "\u001b[43m\u001b[32mHello, world!\u001b[0m\n",
+      "\u001b[4m\u001b[1m\u001b[34mHello, world!\u001b[0m\n",
+      "\u001b[36mHello, world!\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "from termcolor import colored\n",
+    "\n",
+    "# Colored text with different attributes\n",
+    "print(colored('Hello, world!', 'red'))  # Red text\n",
+    "print(colored('Hello, world!', 'green',\n",
+    "              'on_yellow'))  # Green text on yellow background\n",
+    "print(colored('Hello, world!', 'blue',\n",
+    "              attrs=['bold', 'underline']))  # Bold and underline blue text\n",
+    "print(colored('Hello, world!', 'cyan'))  # Cyan text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e811cd65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(colored('a', 'red')))  # just an escaped string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c8f27ed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mHello, \u001b[0mworld\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(colored('Hello, ', 'red') + 'world')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48e8ee97",
+   "id": "87042846",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -944,7 +1146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
