--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1539,9 +1539,48 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "8bc4de38",
+   "metadata": {},
+   "source": [
+    "# Variable Existence and Deleting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2d9bbda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "y = 10\n",
+    "print('x' in locals())\n",
+    "print('x' in globals())\n",
+    "print()\n",
+    "\n",
+    "del x, y\n",
+    "print('x' in locals())\n",
+    "print('x' in globals())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f87709e",
+   "id": "b28134b8",
    "metadata": {},
    "outputs": [],
    "source": []
