--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "28f705fc",
    "metadata": {},
    "outputs": [],
@@ -223,6 +223,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e93af6d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entering\n",
+      "entering\n",
+      "c1\n",
+      "c2\n",
+      "exiting\n",
+      "exiting\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiple contexts without having to nest\n",
+    "with MyContext('c1') as m1, MyContext('c2') as m2:\n",
+    "    print(m1.message)\n",
+    "    print(m2.message)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "b142fc19",
@@ -233,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "67a33c7c",
    "metadata": {},
    "outputs": [
@@ -241,6 +267,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "\n",
       "1\n",
       "2\n",
       "3\n",
@@ -277,7 +309,18 @@
     "my_iterable = MyIterable([1, 2, 3, 4, 5])\n",
     "\n",
     "for item in my_iterable:\n",
-    "    print(item)"
+    "    print(item)\n",
+    "print()\n",
+    "\n",
+    "# Lower-level Usage\n",
+    "my_iterable = MyIterable([1, 2, 3, 4, 5])\n",
+    "my_iterator = iter(my_iterable)  # normally the for loop does this\n",
+    "while True:\n",
+    "    try:\n",
+    "        item = next(my_iterator)  # normally the for loop does this\n",
+    "        print(item)\n",
+    "    except StopIteration:  # normally the for loop catches this\n",
+    "        break"
    ]
   },
   {
@@ -295,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "5836b6b0",
    "metadata": {},
    "outputs": [
@@ -303,19 +346,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "doing work for 1\n",
       "1\n",
+      "doing work for 2\n",
       "2\n",
-      "3\n"
+      "doing work for 3\n",
+      "3\n",
+      "the end\n"
      ]
     }
    ],
    "source": [
     "def my_generator():\n",
+    "    print('doing work for 1')\n",
     "    yield 1  # values provided to next()\n",
+    "    print('doing work for 2')\n",
     "    yield 2\n",
+    "    print('doing work for 3')\n",
     "    yield 3\n",
+    "    print('the end')\n",
     "    return  # ends generation (raises StopIteration)\n",
     "    yield 4  # never yielded\n",
+    "    # StopIteration would be raised here if no return\n",
     "\n",
     "\n",
     "generator = my_generator()  # generator function returns iterable\n",
@@ -325,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "b1b267af",
    "metadata": {},
    "outputs": [
@@ -333,6 +385,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "doing work for 1\n",
+      "doing work for 2\n",
+      "doing work for 3\n",
+      "the end\n",
       "[1, 2, 3]\n"
      ]
     }
@@ -348,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "3b940599",
    "metadata": {},
    "outputs": [
@@ -371,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "27de4fa2",
    "metadata": {},
    "outputs": [],
@@ -381,9 +437,68 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3c55fe1c",
+   "metadata": {},
+   "source": [
+    "# Generator from Generator\n",
+    "\n",
+    "Iterate over a lazy sequence while **maintaining the laziness**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3c50a22a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "starting iteration now\n",
+      "doing work for 1\n",
+      "1\n",
+      "doing work for 2\n",
+      "4\n",
+      "doing work for 3\n",
+      "9\n",
+      "the end\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_generator():\n",
+    "    print('doing work for 1')\n",
+    "    yield 1  # values provided to next()\n",
+    "    print('doing work for 2')\n",
+    "    yield 2\n",
+    "    print('doing work for 3')\n",
+    "    yield 3\n",
+    "    print('the end')\n",
+    "    return  # ends generation (raises StopIteration)\n",
+    "    yield 4  # never yielded\n",
+    "\n",
+    "\n",
+    "# This would work (and be lazy) even for an eager sequence.\n",
+    "def squares(seq):\n",
+    "    for item in seq:\n",
+    "        yield item**2\n",
+    "\n",
+    "\n",
+    "gen = my_generator()\n",
+    "sqrs = squares(gen)\n",
+    "\n",
+    "print('starting iteration now')\n",
+    "for sqr in sqrs:\n",
+    "    print(sqr)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22372e14",
+   "id": "f66e4f35",
    "metadata": {},
    "outputs": [],
    "source": []
