Adding conda and pip snippets.

--- a/python/CLI.ipynb
+++ b/python/CLI.ipynb
@@ -1122,9 +1122,41 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "839788c7",
+   "metadata": {},
+   "source": [
+    "# REPL\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4e648513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ] on darwin\n",
+      "Type \"help\", \"copyright\", \"credits\" or \"license\" for more information.\n",
+      ">>> \n",
+      "KeyboardInterrupt\n",
+      ">>> \n",
+      ">>> "
+     ]
+    }
+   ],
+   "source": [
+    "!python3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87042846",
+   "id": "1c4cb690",
    "metadata": {},
    "outputs": [],
    "source": []
