--- a/python/Docstring.ipynb
+++ b/python/Docstring.ipynb
@@ -14,6 +14,7 @@
     "This may span multiple lines.\n",
     "\"\"\"\n",
     "\n",
+    "\n",
     "def example_function(arg1, arg2):\n",
     "    \"\"\"Summarize the purpose of the function in one line.\n",
     "\n",
@@ -85,13 +86,14 @@
     "    def example_method2(self):\n",
     "        \"\"\"This is an example of a one-liner docstring.\"\"\"\n",
     "\n",
+    "\n",
     "CONSTANT_VARIABLE = 42\n",
     "\"\"\"Description of the constant variable.\n",
     "\n",
     "This is a constant value that should not be modified.\n",
     "\"\"\"\n",
     "\n",
-    "pass # suppress unnecessary output in jupyter"
+    "pass  # suppress unnecessary output in jupyter\n"
    ]
   },
   {
