Adding more default arg examples.

--- a/python/Basics.ipynb
+++ b/python/Basics.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9b2e692e",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "18553b07",
    "metadata": {},
@@ -21,7 +19,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "74e41c5c",
    "metadata": {},
@@ -156,7 +153,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c5eeb3cd",
    "metadata": {},
@@ -255,7 +251,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d80d99f8",
    "metadata": {},
@@ -320,7 +315,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "fc93a619",
    "metadata": {},
@@ -433,7 +427,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7dbb943c",
    "metadata": {},
@@ -508,7 +501,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b5b86c72",
    "metadata": {},
@@ -562,7 +554,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05d18547",
    "metadata": {},
@@ -616,7 +607,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "45fe16b9",
    "metadata": {},
@@ -751,7 +741,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dbd4718e",
    "metadata": {},
@@ -799,7 +788,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3c171b54",
    "metadata": {},
@@ -850,7 +838,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7d603429",
    "metadata": {},
@@ -958,7 +945,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b576eb70",
    "metadata": {},
@@ -1068,7 +1054,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "05b2cc0b",
    "metadata": {},
@@ -1120,7 +1105,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d11885f5",
    "metadata": {},
@@ -1159,7 +1143,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "02a95aab",
    "metadata": {},
@@ -1193,7 +1176,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "425726da",
    "metadata": {},
@@ -1221,7 +1203,7 @@
     "\n",
     "\n",
     "# Default/optional values\n",
-    "def h(a, b=10):\n",
+    "def h(a, b=10, c='bob', d=None):\n",
     "    print(a + b)\n",
     "\n",
     "\n",
@@ -1294,7 +1276,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d35ccfc1",
    "metadata": {},
@@ -1327,7 +1308,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "72747fd6",
    "metadata": {},
@@ -1381,7 +1361,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c3ffe452",
    "metadata": {},
@@ -1428,7 +1407,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b2dc8aa6",
    "metadata": {},
@@ -1573,7 +1551,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "90feafef",
    "metadata": {},
@@ -1609,7 +1586,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f6445b2f",
    "metadata": {},
@@ -1674,7 +1650,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "263a3c35",
    "metadata": {},
@@ -1740,7 +1715,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e05ffba0",
    "metadata": {},
@@ -1775,7 +1749,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "964f3d45",
    "metadata": {},
@@ -1823,7 +1796,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3937959f",
    "metadata": {},
@@ -1882,7 +1854,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "33249f38",
    "metadata": {},
@@ -1931,7 +1902,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f5b13b77",
    "metadata": {},
