Adding snippets for built-in libraries.

--- a/python/Collections Tips.ipynb
+++ b/python/Collections Tips.ipynb
@@ -382,9 +382,84 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "856df543",
+   "metadata": {},
+   "source": [
+    "# Stack and Queue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bbb5b4bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "\n",
+    "# Create a queue\n",
+    "queue = deque()\n",
+    "\n",
+    "# Enqueue elements\n",
+    "queue.append(1)\n",
+    "queue.append(2)\n",
+    "queue.append(3)\n",
+    "\n",
+    "# Dequeue elements\n",
+    "item = queue.popleft()\n",
+    "print(item)  # Output: 1\n",
+    "\n",
+    "item = queue.popleft()\n",
+    "print(item)  # Output: 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "421a924c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a stack\n",
+    "stack = []\n",
+    "\n",
+    "# Push elements\n",
+    "stack.append(1)\n",
+    "stack.append(2)\n",
+    "stack.append(3)\n",
+    "\n",
+    "# Pop elements\n",
+    "item = stack.pop()\n",
+    "print(item)  # Output: 3\n",
+    "\n",
+    "item = stack.pop()\n",
+    "print(item)  # Output: 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45ed066a",
+   "id": "8afb89fd",
    "metadata": {},
    "outputs": [],
    "source": []
