--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1578,9 +1578,122 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9da284c3",
+   "metadata": {},
+   "source": [
+    "# Printing with Prefixes\n",
+    "\n",
+    "Note that these are equivalent but the last one is much more readable.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "76b3de24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 5\n",
+      "x: 5\n",
+      "x: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "print('x: ' + str(x))\n",
+    "print(f'x: {x}')\n",
+    "print('x:', x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4f18887e",
+   "metadata": {},
+   "source": [
+    "# Float Equality\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f86d9698",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0.1\n",
+    "y = 0.2\n",
+    "z = x + y\n",
+    "\n",
+    "# Fails due to float margin of error\n",
+    "print(z == 0.3)\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "print(math.isclose(z, 0.3))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "97a2c168",
+   "metadata": {},
+   "source": [
+    "# Reference Modifications\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ea2890a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3, 4], [1, 2, 3, 4]]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 3]\n",
+    "m = [l, l]\n",
+    "\n",
+    "# this affects m!\n",
+    "l.append(4)\n",
+    "print(m)\n",
+    "\n",
+    "\n",
+    "# this affects the original!\n",
+    "def f(seq):\n",
+    "    seq.append(5)\n",
+    "\n",
+    "\n",
+    "f(l)\n",
+    "print(l)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b28134b8",
+   "id": "5b4c9a11",
    "metadata": {},
    "outputs": [],
    "source": []
