Adding decorator snippets.

--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1691,9 +1691,71 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5f00b65c",
+   "metadata": {},
+   "source": [
+    "# Externally Added Attributes\n",
+    "\n",
+    "See the notebook on implementing special objects for attributes you can use to control this on custom types.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "94fc8114",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nope on int\n",
+      "nope on dict\n",
+      "10\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Built-in types (not allowed)\n",
+    "x = 5\n",
+    "try:\n",
+    "    x.y = 10\n",
+    "except AttributeError:\n",
+    "    print('nope on int')\n",
+    "\n",
+    "d = {'a': 2}\n",
+    "try:\n",
+    "    d.y = 10\n",
+    "except AttributeError:\n",
+    "    print('nope on dict')\n",
+    "\n",
+    "\n",
+    "# Custom types (allowed by default)\n",
+    "class MyClass:\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "m = MyClass()\n",
+    "m.y = 10\n",
+    "print(m.y)\n",
+    "\n",
+    "\n",
+    "# Functions (allowed!)\n",
+    "def f():\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "f.x = 10\n",
+    "print(f.x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b4c9a11",
+   "id": "8b1339b4",
    "metadata": {},
    "outputs": [],
    "source": []
