Adding snippets for logging, yield, and properties.

--- a/python/Implementing Special Objects.ipynb
+++ b/python/Implementing Special Objects.ipynb
@@ -496,9 +496,211 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f8d2faa9",
+   "metadata": {},
+   "source": [
+    "# yield statement forms\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "efd93fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "1\n",
+      "25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We saw this above already.\n",
+    "def simple_generator():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "\n",
+    "\n",
+    "# Included sub-generator items in-place.\n",
+    "def higher_generator():\n",
+    "    yield 0\n",
+    "    yield from simple_generator()\n",
+    "    yield 4\n",
+    "\n",
+    "\n",
+    "# Yield as part of expression.\n",
+    "def more_stateful_generator():\n",
+    "    x1 = yield 1\n",
+    "    x2 = yield x1**2\n",
+    "    x3 = yield x2**3\n",
+    "\n",
+    "\n",
+    "print(list(simple_generator()))\n",
+    "print(list(higher_generator()))\n",
+    "\n",
+    "gen = more_stateful_generator()\n",
+    "print(next(gen))\n",
+    "print(gen.send(5))  # the x2 assignment gets what you send in\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0baf8972",
+   "metadata": {},
+   "source": [
+    "# generator.send()\n",
+    "\n",
+    "Send is a way to do two-way communication with a generator. After the first next() to start the iteration (first yield inside the generator), the generator sees the next value sent in. Then it returns some expression based on that, and it goes back and forth like that.\n",
+    "\n",
+    "The yield statement sends what it says and returns what it sent back (which may be the same or different).\n",
+    "\n",
+    "If you use next() instead of send(), it will send in None.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a6ffc692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "x1: 10\n",
+      "10\n",
+      "x2: 20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def two_way_communication_generator():\n",
+    "    x1 = yield 1\n",
+    "    print('x1:', x1)\n",
+    "    x2 = yield x1\n",
+    "    print('x2:', x2)\n",
+    "    x3 = yield x2\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    generator = two_way_communication_generator()\n",
+    "    print(next(generator))\n",
+    "    print(generator.send(10))\n",
+    "    print(generator.send(20))\n",
+    "\n",
+    "except StopIteration:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "3ac11624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "100\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def long_living_generator():\n",
+    "    next_val = 1\n",
+    "    while True:\n",
+    "        next_val = (yield next_val)**2\n",
+    "        if next_val == 0:\n",
+    "            return\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    gen = long_living_generator()\n",
+    "    print(next(gen))\n",
+    "    print(gen.send(1))\n",
+    "    print(gen.send(10))\n",
+    "    print(gen.send(2))\n",
+    "    print(gen.send(0))\n",
+    "except StopIteration:\n",
+    "    pass"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3b5c4789",
+   "metadata": {},
+   "source": [
+    "# Properties\n",
+    "\n",
+    "The @property decorator makes a method into a property, which means you can access it like an attribute and the getter will be called.\n",
+    "\n",
+    "The setter decorator shown below is to implement a setter for a specific property.\n",
+    "\n",
+    "Internally, @property taps into the internals of how a class gets and sets attributes.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "097d84b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4.0\n",
+      "12.56636\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Circle:\n",
+    "\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    @property\n",
+    "    def diameter(self):\n",
+    "        return 2 * self.radius\n",
+    "\n",
+    "    @diameter.setter\n",
+    "    def diameter(self, value):\n",
+    "        self.radius = value / 2\n",
+    "\n",
+    "    @property\n",
+    "    def area(self):\n",
+    "        return 3.14159 * self.radius**2\n",
+    "\n",
+    "\n",
+    "circle = Circle(1)\n",
+    "print(circle.diameter)\n",
+    "circle.diameter = 4\n",
+    "print(circle.diameter)\n",
+    "print(circle.area)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f66e4f35",
+   "id": "4ca50cee",
    "metadata": {},
    "outputs": [],
    "source": []
