--- a/TensorFlow/Tensor Shapes & Routing.ipynb
+++ b/TensorFlow/Tensor Shapes & Routing.ipynb
@@ -13,6 +13,27 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "06c937c8",
+   "metadata": {},
+   "source": [
+    "## Compared to numpy arrays\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ca94e678",
+   "metadata": {},
+   "source": [
+    "- less instance methods (have to rely more on static methods)\n",
+    "- some methods named differently\n",
+    "- otherwise the concepts transfer very well\n",
+    "  - eg. axes, slicing, masks, broadcasting, etc. are all the same\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "d41d7981",
    "metadata": {},
    "source": [
@@ -909,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
