Adding function and class snippets.

--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "8f14c252",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
        "undefined"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,6 +482,11 @@
     "  console.log(str1 !== str2); // Output: false (strict equality: value and type)\n",
     "  console.log(arr1 !== arr2); // Output: true (reference equality)\n",
     "  console.log(obj1 !== obj2); // Output: true (reference equality)\n",
+    "\n",
+    "  // Object.equals() for value equality\n",
+    "  // Only work if implemented (see Classes notebook)\n",
+    "  //console.log(arr1.equals(arr2));\n",
+    "  //console.log(obj1.equals(obj2));\n",
     "\n",
     "  // Value Equality for Arrays (deep comparison)\n",
     "  console.log(JSON.stringify(arr1) === JSON.stringify(arr2)); // Output: true\n",
@@ -1198,7 +1203,9 @@
    "id": "6869070e",
    "metadata": {},
    "source": [
-    "# Reflection\n"
+    "# Reflection\n",
+    "\n",
+    "Be very careful with this. A lot of times **structural typing** is used which can defeat these kinds of checks.\n"
    ]
   },
   {
