--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "eafdaef4",
    "metadata": {},
@@ -16,7 +15,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "75abc74a",
    "metadata": {},
@@ -26,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "id": "da736bb1",
    "metadata": {},
    "outputs": [
@@ -34,7 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ts-files/built-in-collections.ts\n"
+      "Overwriting ts-files/built-in-collections.ts\n"
      ]
     }
    ],
@@ -77,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "id": "6070f27b",
    "metadata": {},
    "outputs": [
@@ -101,7 +99,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ce67f79a",
    "metadata": {},
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 73,
    "id": "0259ddab",
    "metadata": {},
    "outputs": [
@@ -181,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "id": "60b6916d",
    "metadata": {},
    "outputs": [
@@ -218,7 +215,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "41a7d607",
    "metadata": {},
@@ -228,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "id": "d323e336",
    "metadata": {},
    "outputs": [
@@ -273,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "id": "1e0f251b",
    "metadata": {},
    "outputs": [
@@ -297,7 +293,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3cafdbef",
    "metadata": {},
@@ -307,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 77,
    "id": "1b8b2a95",
    "metadata": {},
    "outputs": [
@@ -360,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "id": "d4e8634b",
    "metadata": {},
    "outputs": [
@@ -383,7 +378,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "64d3367f",
    "metadata": {},
@@ -393,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 79,
    "id": "bc5fdceb",
    "metadata": {},
    "outputs": [
@@ -431,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 80,
    "id": "348d1232",
    "metadata": {},
    "outputs": [
@@ -453,7 +447,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "58308ae6",
    "metadata": {},
@@ -463,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "id": "c8efd533",
    "metadata": {},
    "outputs": [
@@ -508,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "id": "4c072406",
    "metadata": {},
    "outputs": [
@@ -527,7 +520,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "2748e20c",
    "metadata": {},
@@ -537,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "id": "f9927d10",
    "metadata": {},
    "outputs": [
@@ -545,7 +537,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ts-files/classes.ts\n"
+      "Overwriting ts-files/classes.ts\n"
      ]
     }
    ],
@@ -574,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "id": "8a75e927",
    "metadata": {},
    "outputs": [
@@ -593,7 +585,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "acf282d7",
    "metadata": {},
@@ -602,7 +593,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6492b075",
    "metadata": {},
@@ -613,7 +603,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "57755a4c",
    "metadata": {},
@@ -623,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 85,
    "id": "3c41ce85",
    "metadata": {},
    "outputs": [
@@ -671,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "id": "beb5a049",
    "metadata": {},
    "outputs": [
